--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://tarasaleh.com",
-  "name": "trnslh",
+  "homepage": "https://ardalansaleh.com",
+  "name": "ardalan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
