--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ardalansaleh.com",
+  "homepage": "https://ardalansaleh.github.io/reactportfoliov2/",
   "name": "ardalan",
   "version": "0.1.0",
   "private": true,
